--- a/templates/flamescope-deploy.yaml
+++ b/templates/flamescope-deploy.yaml
@@ -12,7 +12,7 @@ metadata:
   namespace: default
 spec:
   progressDeadlineSeconds: 600
-  replicas: {{.Values.deployment.replica}}
+  replicas: 3
   revisionHistoryLimit: 10
   selector:
     matchLabels:
