--- a/templates/flamescope-deploy.yaml
+++ b/templates/flamescope-deploy.yaml
@@ -37,6 +37,18 @@ spec:
         volumeMounts:
         - mountPath: /profiles
           name: profilevolume
+        readinessProbe:
+          httpGet:
+            path: /profile
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /profile
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 3
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
