--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,13 +1,13 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: example-ingress
+  name: my-ingress
 spec:
   rules:
-  - http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          serviceName: {{.Values.name}}-service
-          servicePort: 5000
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              serviceName: flamescope-service
+              servicePort: 5000
