--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: my-ingress
+  annotations:
+    argocd.argoproj.io/sync-options: Validate=false
 spec:
   rules:
     - http:
