--- a/templates/argo-ingress.yaml
+++ b/templates/argo-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: argo-ingress
-  namespace: argo-cd
+  namespace: argocd
   annotations:
     kubernetes.io/ingress.class: ambassador
 spec:
