--- a/templates/argo-ingress.yaml
+++ b/templates/argo-ingress.yaml
@@ -9,8 +9,7 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
-            path: "/"
+          - path: "/"
             backend:
               serviceName: argocd-server
               servicePort: 80
