--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -9,8 +9,7 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
-            path: "/"
+          - path: "/"
             backend:
               serviceName: flamescope-service
               servicePort: 5000
