--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{.Values.name}}-service
-  namespace: default
+  namespace: app-ns
 spec:
   selector:
     app: {{.Values.name}}
