--- a/templates/argo-ingress.yaml
+++ b/templates/argo-ingress.yaml
@@ -8,7 +8,7 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: "/argo"
             backend:
               service:
                 name: argocd-server
