--- a/templates/flamescope-ingress.yaml
+++ b/templates/flamescope-ingress.yaml
@@ -8,7 +8,7 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: "/fs"
             backend:
               service:
                 name: flamescope-service
