--- a/templates/flamescope-deploy.yaml
+++ b/templates/flamescope-deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
     meta.helm.sh/release-name: demo-flamescope
-    meta.helm.sh/release-namespace: default
+    meta.helm.sh/release-namespace: app-ns
   labels:
     app: {{.Values.name}}
     app.kubernetes.io/managed-by: Helm
@@ -12,7 +12,7 @@ metadata:
   namespace: app-ns
 spec:
   progressDeadlineSeconds: 600
-  replicas: {{.Values.replica}}
+  replicas: {{.Values.deployment.replica}}
   revisionHistoryLimit: 10
   selector:
     matchLabels:
